--- a/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-azure-sdk/src/main/resources/META-INF/ruleConfigs.json
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-azure-sdk/src/main/resources/META-INF/ruleConfigs.json
@@ -13,11 +13,11 @@
   },
   "KustoQueriesWithTimeIntervalInQueryStringCheck": {
     "regex_patterns": {
-      "KQL_ANTI_PATTERN_AGO": "\"?ago\\(\"?\\+?\"?\\d+[smhdw]\"?\\+?\"?\\)?\"?",
-      "KQL_ANTI_PATTERN_DATETIME": ".*datetime\\s*\\(\\s*[\"\\+\\s]*\\d{4}-\\d{2}-\\d{2}(?:T\\d{2}:\\d{2}:\\d{2}Z)?[\"\\+\\s]*\\s*\\)",
-      "KQL_ANTI_PATTERN_NOW": "now\\(\\)",
-      "KQL_ANTI_PATTERN_START_OF_PERIOD": "startofday\\(\\)|startofmonth\\(\\)|startofyear\\(\\)",
-      "KQL_ANTI_PATTERN_BETWEEN": ".*between\\\\(datetime\\\\(\\\\d{4}-\\\\d{2}-\\\\d{2}\\\\), datetime\\\\(\\\\d{4}-\\\\d{2}-\\\\d{2}\\\\)\\\\)\n"
+      "KQL_ANTI_PATTERN_AGO": ".*ago\\(",
+      "KQL_ANTI_PATTERN_DATETIME": ".*datetime\\s*\\(",
+      "KQL_ANTI_PATTERN_NOW": ".*now\\(",
+      "KQL_ANTI_PATTERN_START_OF_PERIOD": ".*startofday\\(\\)|.*startofmonth\\(\\)|.*startofyear\\(\\)",
+      "KQL_ANTI_PATTERN_BETWEEN": ".*between\\(datetime\\("
     },
     "antipattern_message": "KQL queries with time intervals in the query string detected.",
     "solution": "Use the QueryTimeInterval parameter in the client method parameters to specify the time interval for the query"
