address PR comments

--- a/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-azure-sdk/src/main/resources/META-INF/ruleConfigs.json
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-azure-sdk/src/main/resources/META-INF/ruleConfigs.json
@@ -9,11 +9,11 @@
   "DetectDiscouragedClientCheck": {
     "ServiceBusReceiverAsyncClientCheck": {
       "client_name": "ServiceBusReceiverAsyncClient",
-      "antipattern_message": "Use of ServiceBusReceiverAsyncClient detected. Use ServiceBusProcessorClient instead."
+      "anti_pattern_message": "Use of ServiceBusReceiverAsyncClient detected. Use ServiceBusProcessorClient instead."
     },
     "EventHubConsumerAsyncClientCheck": {
       "client_name": "EventHubConsumerAsyncClient",
-      "antipattern_message": "Use of EventHubConsumerAsyncClient detected. Use EventProcessorClient instead."
+      "anti_pattern_message": "Use of EventHubConsumerAsyncClient detected. Use EventProcessorClient instead which provides a higher-level abstraction that simplifies event processing, making it the preferred choice for most developers."
     }
   }
 }
