--- a/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-azure-sdk/src/main/resources/META-INF/ruleConfigs.json
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-azure-sdk/src/main/resources/META-INF/ruleConfigs.json
@@ -119,9 +119,11 @@
     "antiPatternMessage": "Endpoint should not be used with KeyCredential for non-Azure OpenAI clients"
   },
   "UpgradeLibraryVersionCheck": {
+    "url": "https://repo1.maven.org/maven2/com/azure/azure-sdk-bom/maven-metadata.xml",
     "antiPatternMessage": "A newer stable minor version of {{fullName}} is available. We recommend you update to version {{recommendedVersion}}.x"
   },
   "IncompatibleDependencyCheck": {
+    "url": "https://raw.githubusercontent.com/Azure/azure-sdk-for-java/main/eng/versioning/supported_external_dependency_versions.json",
     "antiPatternMessage": "The version of {{fullName}} is not compatible with other dependencies of the same library defined in the pom.xml. Please use versions of the same library release group {{recommendedVersion}}.x to ensure proper functionality."
   }
 }
