Support opening Redis cache in "Database" tool window

--- a/Utils/azure-toolkit-ide-libs/azure-toolkit-ide-common-lib/src/main/resources/bundles/com/microsoft/azure/toolkit/operation.properties
+++ b/Utils/azure-toolkit-ide-libs/azure-toolkit-ide-common-lib/src/main/resources/bundles/com/microsoft/azure/toolkit/operation.properties
@@ -433,6 +433,7 @@ user/storage.open_azure_storage_explorer.storage=open storage ({0}) with Azure S
 ######################begin @AzureOperation&registered actions######################
 user/arm.update_deployment.deployment=update Azure Resource deployment ({0})
 user/cosmos.open_database_tools.account=open Azure Cosmos DB account ({0}) with "Database Tools and SQL" plugin
+user/redis.open_database_tools.name=open Redis Cache ({0}) with "Database Tools and SQL" plugin
 user/function.start_remote_debugging.app=start remote debugging for app ({0})
 user/function.enable_remote_debugging.app=enable remote debug of app ({0})
 user/function.disable_remote_debugging.app=disable remote debug of app ({0})
