--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.appservice/pom.xml
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.appservice/pom.xml
@@ -13,7 +13,7 @@
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>azure-toolkit-ide-appservice-lib</artifactId>
-      <version>0.48.0-SNAPSHOT</version>
+      <version>0.48.0</version>
     </dependency>
   </dependencies>
   <repositories>
