upgrade toolkit-libs to `0.49.0-SNAPSHOT`

--- a/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-base/build.gradle
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-base/build.gradle
@@ -42,8 +42,8 @@ allprojects {
     }
 
     ext {
-        azureToolkitLibsVersion = "0.48.0"
-        azureToolkitIdeLibsVersion = "0.48.0"
+        azureToolkitLibsVersion = "0.49.0-SNAPSHOT"
+        azureToolkitIdeLibsVersion = "0.49.0-SNAPSHOT"
     }
 
     dependencyManagement {
