--- a/PluginsAndFeatures/azure-toolkit-for-intellij/src/main/resources/META-INF/plugin.xml
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/src/main/resources/META-INF/plugin.xml
@@ -31,6 +31,7 @@
       <ul>
       <li>Added Managed identity support for Azure Functions.</li>
       <li>Fixed <a href="https://github.com/microsoft/azure-tools-for-java/issues/8473">#8473</a>: Class initialization must not depend on services. Consider using instance of the service on-demand instead.</li>
+      <li>Fixed <a href="https://github.com/microsoft/azure-tools-for-java/issues/8497">#8497</a>: fix support for swap.</li>
       </ul>
       <p>You may get the full change log <a href="https://github.com/Microsoft/azure-tools-for-java/blob/develop/CHANGELOG.md">here</a></p>
     </html>
