--- a/PluginsAndFeatures/azure-toolkit-for-intellij/gradle.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/gradle.properties
@@ -1,7 +1,7 @@
 pluginVersion=3.93.0-SNAPSHOT
 intellijDisplayVersion=2024.2
-intellij_version=IU-242-EAP-SNAPSHOT
-platformVersion=242-EAP-SNAPSHOT
+intellij_version=IU-2024.2
+platformVersion=2024.2
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild=242
 pluginUntilBuild=242.*
