Remove SNAPSHOT for intellij toolkits, prepare for release

--- a/PluginsAndFeatures/azure-toolkit-for-intellij/gradle.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/gradle.properties
@@ -1,4 +1,4 @@
-pluginVersion=3.93.0-SNAPSHOT
+pluginVersion=3.93.0
 intellijDisplayVersion=2024.2
 intellij_version=IU-2024.2
 platformVersion=2024.2
