--- a/Utils/azure-toolkit-ide-libs/azure-toolkit-ide-cognitiveservices-lib/pom.xml
+++ b/Utils/azure-toolkit-ide-libs/azure-toolkit-ide-cognitiveservices-lib/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.microsoft.azure</groupId>
         <artifactId>azure-toolkit-ide-libs</artifactId>
-        <version>0.49.0</version>
+        <version>0.50.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>azure-toolkit-ide-cognitiveservices-lib</artifactId>
