--- a/PluginsAndFeatures/azure-toolkit-for-intellij/gradle.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/gradle.properties
@@ -1,4 +1,4 @@
-pluginVersion=3.93.0
+pluginVersion=3.94.0-SNAPSHOT
 intellijDisplayVersion=2024.2
 intellij_version=IU-2024.2
 platformVersion=2024.2
